--- a/mern_be/package.json
+++ b/mern_be/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.8.9",
     "nodemon": "^2.0.2"
   }
 }
